# trading-app

./: .coverage  .env  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  __init__.py  accounts.py  app.py  check_executions.py  check_funds.py  check_orders.py  check_positions.py  contracts.py  core.py  demo.sh  fetch_data.py  gridlock_scaffold.sh  historical_data.py  ib_listener.py  kill_switch.py  main.py  main_trade.py  manage_orders.py  order_management_test.py  order_portfolio_management.py  orders.py  portfolio.py  positions.py  requirements.txt  setup.cfg  smoke_test.sh  stream_live_data.py  stream_yahoo.py  tick_data.sqlite  utils.py  wrapper.py  (+2 more)
api/: health.py
data/: demo_orders.yaml  malformed_orders.yaml  stream_live_data.py
docs/: PROTOCOL.md  RUNBOOK.md
grafana/: README.md  TradingApp.json
ib/: client.py  core.py  ib_listener.py
infra/: Dockerfile  docker  docker-compose.yml  prometheus.yml
proto/: cr.proto
risk/: throttle.py
scripts/: .coverage  __init__.py  cancel_replace_receiver.py  connection_pool.py  core.py  cr_receiver.py  demo_sender.py  fetch_data.py  helpers.py  main_trade.py  manage_orders.py  market_data_publisher.py  metrics_server.py  order_factory.py  order_management_test.py  order_portfolio_management.py  order_status_relay.py  orders.py  portfolio.py  positions.py  proto_codegen.py  retry.py  state_store.py  test_state_store.py  v1_client.py  v1_receiver.py  validation.py
shared_proto/: __init__.py  ack.proto  envelope.proto  market_data.proto  market_data_pb2.py  (+2 more)
(+50 files in other folders)
