[metadata]
name = shared-proto
version = 0.1.0
author = Example Maintainer
description = Shared protobuf messages and generated stubs
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = True
python_requires = >=3.8

[options.package_data]
* = *.proto
